--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-numpy==1.8.0
-cython==0.19.1
-numexpr==2.1
-git+https://github.com/pydata/pandas.git
+numpy
+cython
+numexpr
+git+https://github.com/dalejung/pandas.git@pandas_metaclass#egg=pandas
