--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ python:
 # command to install dependencies
 install: 
   - "pip install ."
-  - "pip install -r requirements.txt"
+  - "cat requirements.txt | xargs pip install"
 
 # command to run tests
 script: nosetests
