try to fix pathing

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,8 @@ python:
   - "3.4"
 
 # command to install dependencies
-install: 
-  - ci_build.sh
+install:
+  - ./ci_build.sh
 
 
 # command to run tests
